# hackage-server

./: cabal.project  cabal.project.freeze  hackage-server.cabal
Distribution/: Server.hs
Distribution/Server/Features/Search/: PkgSearch.hs
exes/: BuildClient.hs  ImportClient.hs  Main.hs
snowball.hs/: .boring  .stylish-haskell.yaml  Makefile  snowball.cabal
snowball.hs/_darcs/: hashed_inventory  index  patch_description.txt  rebase  tentative_pristine
snowball.hs/_darcs/inventories/: 0000000353-82d44abd16f6213c2639428950f30fe7429916852adf7166157dd8ef308a8224  0000000700-cc9cc300ea4ab9940cc03ca53bdee31802c2b00032722ea97becaded007bd360  0000000931-f41798e2754ffa707026295256c9407f30ca160084281179e9881e0a8b49fb73  0000001050-d5c2caf7bbae4b5825e0d7fa1eef66c3d3291a127fb7525151ff70fd29ab3743  0000004010-0bf9168bcd23c2aadad6ef6dc29a3c857a3e2c8a5e30f2e8424ac6bafd0d4fae  0000007780-009befc770d6f19b360858400053af59efa01770a7b482b5100d8d1d4a7c8fc6  0000007980-2fa0bf2f4a492f3fad4b545babd161e0ed610676facb3ca0f613b9cc3cfb32bf
snowball.hs/_darcs/patch_index/: fid_map  fp_map  patch_ids  repo_state  touch_map
snowball.hs/_darcs/patches/: 0000000143-6c58d4f1a5991807cffee38be9de449dc743aa55cb0cb31600b44e20f1d1ede2  0000000152-fcfe7e44b89b14bc019f553e79823947ebbdda0e5f5660f61f241ae5ca5a0ce8  0000000181-ce028cb758a4f3ef70ab11f838d0418ca0f31661eba2f393c5b6ff1177977af9  0000000182-e973e3576f04d0a5ad12c970c8297c2fdb59769b2978f9c5d82c54ad95a22ddb  0000000183-23ee1078553b9ce8fee32e8f717bdc844f7db01b132bd88121305b2d489c8b38  0000000185-07fbbdd9e5bc95124d8c9c2b6c3060ef2a82bfe50f6845b54313b2a03f257e35  0000000197-da5f558f874da190e76e757861fa229927edb466208273499ff1318e5f7aa584  0000000210-90f1193cd1bf380d8f8d234b5aaab796085891539a5811b9b264abdc4c6b653c  0000000223-052fe57fb7bb0f8fa2afd01fd76d66a3197d207b621a9ba5503e670b28dcc96e  0000000234-ae077d542fbec1772e3cabd287360e6b8e1f198da5a81fc391df0409f8d97f05  0000000240-733d54ea468396bab23939d62c70e95770862084a9d96053003bae51d25669ab  0000000244-0a64f2d93a2e396dc4460c1c08562ffcf65e26994950884c91a439db35c80005  0000000284-e1546c92148b69dc7d6731e32ab5a8aa677020458a39bf5bd6881ca941097a7d  0000000287-f82976040f26507a5f082d55ff6eba9cdeb6f6e5c3474ad7a845318a1f032f4e  0000000290-2f15597f2b738c3de704d4b01625803007cdfa6586f2e9a8f2ebe58422271fe6  0000000293-d4e12ccb2164d9dee6b9be491ef5e113bbf9062de250e793df39eb0bcaa0e3ea  0000000298-53fbe892109f46abf0b8a61fdeec2703638ab13faefcfd4d507424d2d26ef204  0000000308-ec496f2477bb1e80107efb8127d03b7a958e25779f47eeeeee89d28e9e6338d9  0000000320-3282411d75a73acd9f4b542e3f6bf7730fc0b601ea5c16edfe0f2258d2e9fb3e  0000000353-0415ae4ed3edeba111a4cea7ec9f75ef40136431bfc21f69392e0ccaeff0be7c  0000000378-2aa52c42f485d11c62c52ace14d838576683e3e3d1db176dd0e231a77527863d  0000000393-52e7543685dc30ad18424fa2653fb3b1807162a7671c3697dc0d7a2ce5f0f20e  0000000413-5b8fa7f53b6286b26700c3374f3d4d4050d228482fa99ded4fddebf6f709a335  0000000421-86944e544072989d4e65fdc422ef9c7dfa3b7041ca9db8ef63152d9e48b98ec6  0000000422-557af2ae4a9d3b06e84901d73f358638ace4483e22be9d2287e21b2a6388039d  0000000442-3a6ad6b4851911ab941114670dd4dfd7592c09a2d4fe9f429adcacbfa07d828a  0000000470-bc2599c9e04508a1aaba3214f1df9a133f07e82785e3ca06546474f353932185  0000000473-5e08f4f0782781315140c3d4bcdd62a6777574e0afc652d6261494894ee20d36  0000000544-1fde603126e1c8539224e71afdbcdb2438106aa9130fa7b7f8ef895a613349ac  0000000551-1222985d91dce1b39d21198b4718e151bc5cb6bb5beb35c18fd2346755f4d4ab  0000000573-6cedcae0192397871eba6e62c0e43c2d6f402dc464c87cecb76554ec0dc7a6e6  0000000582-309e40331347833afc275aa70b413c26a5cae8bd3ccb8746a902eb46722f9e0e  0000000601-19158b46318d62f4b2692bf1bb394ab684f43cd54e4878a2c4002f53c4f19ed5  0000000620-7246077804ccba9c6b07449d15d6d472d5a8d70b2dc4591f2eaaf0fe173e749f  0000000622-74826d1e27b2b147bba2fa18bc9214c3951ea06cd71edb7fbb6c170eac283056  0000000634-b2eabd0bc5842917804ecc6a6de700ba0715f3262b602a75ce53251773e626a8  0000000677-a9311ebe08cf852de57bf95a0f945a33f58549aa0e80f05460823943d2bbad9e  0000000694-3e11d8bce969c48ea204c7762de846f1e7b09975ae4e34dcc4b81b3ffd07df85  0000000700-021b4b228ad5655fd30cff262501b293dcba9f6a57bb8c5b3c2711cedf445323  0000000703-ec1e28a7f2a6b6b81d46bf02eea2e3af58a5ec00b06132dd009be442a75f4ca6  (+43 more)
snowball.hs/_darcs/prefs/: defaultrepo  sources
snowball.hs/bench/: bench-snowball.hs
snowball.hs/share/: danish.txt.xz  dutch.txt.xz  english.txt.xz  finnish.txt.xz  french.txt.xz  german.txt.xz  hungarian.txt.xz  italian.txt.xz  norwegian.txt.xz  portuguese.txt.xz  romanian.txt.xz  russian.txt.xz  spanish.txt.xz  swedish.txt.xz
snowball.hs/src/NLP/: Snowball.hs
snowball.hs/src/NLP/Snowball/: Common.hs  IO.hs  Internal.hs  ST.hs
snowball.hs/src/NLP/Snowball/IO/: Unsafe.hs
snowball.hs/src/NLP/Snowball/IO/Unsafe/: C.hs
snowball.hs/src/NLP/Snowball/ST/: Lazy.hs
snowball.hs/test/: doctest.hs  hspec.hs  snowball-fixtures.hs  stemmer-fixtures.hs  test-snowball.hs
src-server/Distribution/: Server.hs
src-server/Distribution/Server/Features/: Documentation.hs  Html.hs  Mirror.hs  Tags.hs
src-server/Distribution/Server/Features/BuildReports/: BuildReport.hs  BuildReports.hs
src-server/Distribution/Server/Features/Core/: Backup.hs
src-server/Distribution/Server/Features/DownloadCount/: Backup.hs
src-server/Distribution/Server/Features/Search/: ExtractDescriptionTerms.hs  PkgSearch.hs
src-server/Distribution/Server/Features/Security/: Backup.hs  MD5.hs  Orphans.hs  SHA256.hs
src-server/Distribution/Server/Framework/: BackupRestore.hs  Instances.hs  Templating.hs
src-server/Distribution/Server/Pages/: Package.hs  PackageFromTemplate.hs  Recent.hs
src-server/Distribution/Server/Pages/Package/: HaddockHtml.hs
src-server/Distribution/Server/Users/: AuthToken.hs
src-server/Distribution/Server/Util/: CabalRevisions.hs  CountingMap.hs  Nonce.hs  ParseSpecVer.hs
